@@ -16,6 +16,8 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.io.Files;
+import com.icegreen.greenmail.junit.GreenMailRule;
+import com.icegreen.greenmail.util.ServerSetup;
 import helpers.RemoteServerHelper;
 import io.ebean.Ebean;
 import io.ebean.text.json.EJson;
@@ -25,6 +27,7 @@ import org.joda.time.DateTime;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.Rule;
 import org.junit.Test;
 import play.libs.Json;
 import play.mvc.Result;
@@ -54,6 +57,10 @@ public class EnrolmentControllerTest extends IntegrationTestCase {
 
     private static Server server;
 
+    @Rule
+    public final GreenMailRule greenMail =
+            new GreenMailRule(new ServerSetup(11465, null, ServerSetup.PROTOCOL_SMTP));
+
     public static class CourseInfoServlet extends HttpServlet {
 
         @Override
@@ -64,8 +71,7 @@ public class EnrolmentControllerTest extends IntegrationTestCase {
 
     @BeforeClass
     public static void startServer() throws Exception {
-        server = RemoteServerHelper.createAndStartServer(31246, ImmutableMap.of(CourseInfoServlet.class,
-                ImmutableList.of("/enrolments")));
+        server = RemoteServerHelper.createAndStartServer(31246, ImmutableMap.of(CourseInfoServlet.class, List.of("/enrolments")));
     }
 
     @AfterClass
@@ -109,6 +115,8 @@ public class EnrolmentControllerTest extends IntegrationTestCase {
         ExamEnrolment ee = Ebean.find(ExamEnrolment.class, exam.getExamEnrolments().get(0).getId());
         assertThat(ee.getUser().getEmail()).isEqualTo(email);
         assertThat(ee.getPreEnrolledUserEmail()).isNull();
+
+        greenMail.waitForIncomingEmail(2000, 1);
     }
 
     @Test
@@ -131,6 +139,8 @@ public class EnrolmentControllerTest extends IntegrationTestCase {
         ExamEnrolment ee = Ebean.find(ExamEnrolment.class, exam.getExamEnrolments().get(0).getId());
         assertThat(ee.getUser().getEppn()).isEqualTo(eppn);
         assertThat(ee.getPreEnrolledUserEmail()).isNull();
+
+        greenMail.waitForIncomingEmail(2000, 1);
     }
 
     @Test
